--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 03:54:00 AM</p>
+    <p class="lastupdate">09/08/2020 03:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.2&#176;F</td>
+        <td class="data">71.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.2&#176;F</td>
+        <td class="data">71.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.2&#176;F</td>
+        <td class="data">71.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.3&#176;F</td>
+        <td class="data">46.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.612 inHg (-0.031)</td>
+        <td class="data">29.611 inHg (-0.033)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.4&#176;F</td>
+        <td class="data">81.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             82.7</span><br/>
-          <span title="03:53:07 AM">
-            71.2</span>
+          <span title="03:58:15 AM">
+            71.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:53:07 AM" class="loval">
-            71.2</span>
+          <span title="03:58:15 AM" class="loval">
+            71.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="02:59:05 AM">
-            42</span><br/>
+          <span title="03:56:19 AM">
+            43</span><br/>
           <span title="12:00:01 AM">
             30</span>
         </td>
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:02:01 AM">
             29.650</span><br/>
-          <span title="03:26:01 AM">
-            29.611</span>
+          <span title="03:55:01 AM">
+            29.607</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="03:26:01 AM (Tuesday)">
-            29.611</span>
+          <span title="03:55:01 AM (Tuesday)">
+            29.607</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/08/2020 03:26:01 AM">
-            29.611</span>
+          <span title="09/08/2020 03:55:01 AM">
+            29.607</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 03:26:01 AM">
-            29.611</span>
+          <span title="09/08/2020 03:55:01 AM">
+            29.607</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 03:26:01 AM">
-            29.611</span>
+          <span title="09/08/2020 03:55:01 AM">
+            29.607</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -423,7 +423,7 @@
         <td class="data new_row hilo_day">
           1</td>
         <td class="data new_row hilo_week">
-          3</td>
+          2</td>
         <td class="data new_row hilo_month">
           3</td>
         <td class="data new_row hilo_year">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          232
+          229
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.2</span><br/>
-          <span title="03:52:01 AM">
-            81.4</span>
+          <span title="03:57:01 AM">
+            81.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 13 hours, 7 minutes</td>
+      <td class="data">6 days, 13 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 13 hours, 7 minutes</td>
+      <td class="data">6 days, 13 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
