--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 04:34:00 AM</p>
+    <p class="lastupdate">09/08/2020 04:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">69.0&#176;F</td>
+        <td class="data">68.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">69.0&#176;F</td>
+        <td class="data">68.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">69.0&#176;F</td>
+        <td class="data">68.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.6&#176;F</td>
+        <td class="data">46.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">45%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.608 inHg (-0.032)</td>
+        <td class="data">29.607 inHg (-0.028)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.1&#176;F</td>
+        <td class="data">80.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             82.7</span><br/>
-          <span title="04:33:15 AM">
-            69.0</span>
+          <span title="04:38:23 AM">
+            68.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:33:15 AM" class="loval">
-            69.0</span>
+          <span title="04:38:23 AM" class="loval">
+            68.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="04:27:03 AM">
-            44</span><br/>
+          <span title="04:34:45 AM">
+            45</span><br/>
           <span title="12:00:01 AM">
             30</span>
         </td>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.2</span><br/>
-          <span title="04:33:01 AM">
-            80.1</span>
+          <span title="04:37:01 AM">
+            80.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -505,8 +505,8 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="02:38:01 AM">
-            31</span><br/>
+          <span title="04:34:01 AM">
+            32</span><br/>
           <span title="12:07:01 AM">
             28</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 13 hours, 47 minutes</td>
+      <td class="data">6 days, 13 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 13 hours, 47 minutes</td>
+      <td class="data">6 days, 13 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
